welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:58: error: not found: value olor
      motif3(olor.GREEN)
             ^PatternPicture:73: error: not found: value doite
    doite()
    ^